下载编写部分，到停止复制文件夹

--- a/youtubeLive/qml.qrc
+++ b/youtubeLive/qml.qrc
@@ -3,5 +3,8 @@
         <file>main.qml</file>
         <file>ParseDialog.qml</file>
         <file>imgs/loading.gif</file>
+        <file>DownloadingView.qml</file>
+        <file>DownloadItem.qml</file>
+        <file>DownloadView.qml</file>
     </qresource>
 </RCC>
